# ai-native-book-of-robotics

./: .env  DEPLOYMENT.md  README.md
.claude/skills/content-personalizer/: SKILL.md
.claude/skills/lesson-summarizer/: SKILL.md
.claude/skills/urdu-translator/: SKILL.md
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: .env  auth.py  config.py  database.py  dependencies.py  index.py  main.py  pyproject.toml  test_ai.py  vercel.json
api/migrations/: 001_create_users_table.sql  002_enable_rls_on_users_table.sql  003_add_auth_fields_to_users.sql  004_create_profiles_and_content_tables.sql  005_create_lessons_table.sql  006_update_personalized_pages_table.sql  008_drop_lesson_fk_constraint.sql  009_create_summaries_table.sql  010_create_translations_table.sql
api/models/: content.py  profile.py  user.py
api/routes/: ai.py  auth.py  drone.py  users.py
api/scripts/: check_constraints.py  check_db_tables.py  migrate.py  test_drone_agent.py  test_personalization.py  verify_phase4.py
api/services/: ai_service.py  auth_service.py  rag_service.py
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  tailwind.config.js
docusaurus/docs/: 00-intro.md  01-quarter-overview.md  02-why-physical-ai-matters.md  03-weekly-breakdown.md  04-hardware-requirements.md  05-4-summary-of-architecture.md
docusaurus/plugins/: proxy-plugin.js
docusaurus/src/components/: AuthToggle.tsx  ContentTransformer.tsx  (+7 more)
specs/001-ai-native-book-platform/: tasks.md
(+20 files in other folders)
